--- a/batman/Experimenting with Inheritance.ipynb
+++ b/batman/Experimenting with Inheritance.ipynb
@@ -16,11 +16,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
+    "\n",
     "import batman\n",
+    "from astropy import constants\n",
     "\n",
     "class ElCurveParams(batman.TransitParams):\n",
     "    \"\"\"\n",
@@ -83,10 +86,39 @@
     "        batman.TransitParams.__init__(self)\n",
     "        \n",
     "        #Add parameters needed for calculating planetary phase curve and ellipsoidal variation\n",
-    "        self.ev_amp = 0. #amplitude of the ellipsoidal variation\n",
-    "        self.beam_amp = 0. #amplitude of the beaming signal\n",
-    "        self.pc_amp = 0. #amplitude of the planet's phase curve, reflected + emitted component\n",
+    "        self.ev_amp = None #amplitude of the ellipsoidal variation\n",
+    "        self.beam_amp = None #amplitude of the beaming signal\n",
+    "        self.pc_amp = None #amplitude of the planet's phase curve, reflected + emitted component\n",
     "        \n",
+    "        self.ev_coeff = None #ellipsoidal variation signal coefficient\n",
+    "        self.beam_coeff = None #beaming signal coefficient\n",
+    "        self.Kz = None #radial velocity amplitude\n",
+    "        self.q = None #planet-star mass ratio\n",
+    "        self.geom_alb = None #geometric albedo\n",
+    "        \n",
+    "    def planetary_curve(self, params):\n",
+    "        \"\"\"\n",
+    "        Reflected + emitted light from a transiting planet\n",
+    "        \"\"\"\n",
+    "        y = - (A_refl*cos(2.*pi*phi))\n",
+    "        y = y + abs(min(y))  \n",
+    "        return y\n",
+    "\n",
+    "    #function for planetary phase curve component: ellipsoidal contribution, come from tidal forces pulling star mass for increased flux\n",
+    "    #function of ind. variable: phase of cycle (phi)\n",
+    "    #function of parameters: A_ellip\n",
+    "    def ellip_curve(phi, A_ellip):\n",
+    "        y = - (A_ellip*cos(2.*2.*pi*phi)) \n",
+    "        y = y + abs(min(y))   \n",
+    "        return y\n",
+    "\n",
+    "    #function for planetary phase curve component: doppler beaming contribution, comes from Kepler bandpass\n",
+    "    #function of ind. variable: phase of cycle (phi)\n",
+    "    #function of parameters: A_beam\n",
+    "    def beam_curve(phi, A_beam):\n",
+    "        y = A_beam*sin(2.*pi*phi)    \n",
+    "        return y\n",
+    "    \n",
     "    def elcurve(self, params):\n",
     "        \"\"\"\n",
     "        Calculate a model light curve including transit, ellipsoidal variations, planetary phase curve, \n",
@@ -109,21 +141,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'a': None, 'fp': None, 'ecc': None, 't_secondary': None, 'limb_dark': None, 'per': None, 'beam_amp': 0.0, 'u': None, 't0': None, 'w': None, 'ev_amp': 0.0, 'rp': None, 'pc_amp': 0.0, 'inc': None}\n"
+     "ename": "ImportError",
+     "evalue": "No module named _eclipse",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-7-246124e8c115>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0m_eclipse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m: No module named _eclipse"
      ]
     }
    ],
-   "source": [
-    "el = ElCurveParams()\n",
-    "print(el.__dict__)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
