--- a/batman/Experimenting with Inheritance.ipynb
+++ b/batman/Experimenting with Inheritance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
     "import batman\n",
     "from astropy import constants\n",
     "\n",
-    "class ElCurveParams(batman.TransitParams):\n",
+    "class EVILMCParams(batman.TransitParams):\n",
     "    \"\"\"\n",
     "        Object to store the physical parameters of the transiting planetary system. \n",
     "        Based on Kreidberg's batman.TransitParams\n",
@@ -82,8 +82,10 @@
     "        >>> params.limb_dark = \"quadratic\"              #limb darkening model\n",
     "    \"\"\"\n",
     "\n",
-    "    def __init__(self):\n",
+    "    def __init__(self, t):\n",
     "        batman.TransitParams.__init__(self)\n",
+    "        \n",
+    "        print(self.t)\n",
     "        \n",
     "        #Add parameters needed for calculating planetary phase curve and ellipsoidal variation\n",
     "        self.ev_amp = None #amplitude of the ellipsoidal variation\n",
@@ -92,34 +94,48 @@
     "        \n",
     "        self.ev_coeff = None #ellipsoidal variation signal coefficient\n",
     "        self.beam_coeff = None #beaming signal coefficient\n",
-    "        self.Kz = None #radial velocity amplitude\n",
-    "        self.q = None #planet-star mass ratio\n",
+    "        self.RV_amp = None #radial velocity amplitude\n",
+    "        self.mass_ratio = None #planet-star mass ratio\n",
     "        self.geom_alb = None #geometric albedo\n",
+    "\n",
+    "class EVILMCModel(batman.TransitModel):\n",
+    "    def __init__(self, t):\n",
+    "        batman.TransitModel.__init__(self)\n",
     "        \n",
-    "    def planetary_curve(self, params):\n",
+    "        #Add parameters needed for calculating planetary phase curve and ellipsoidal variation\n",
+    "        self.ev_amp = params.ev_amp #amplitude of the ellipsoidal variation\n",
+    "        self.beam_amp = params.beam_amp #amplitude of the beaming signal\n",
+    "        self.pc_amp = params.pc_amp #amplitude of the planet's phase curve, reflected + emitted component\n",
+    "        \n",
+    "        self.ev_coeff = params.ev_coeff #ellipsoidal variation signal coefficient\n",
+    "        self.beam_coeff = params.beam_coeff #beaming signal coefficient\n",
+    "        self.RV_amp = params.RV_amp #radial velocity amplitude\n",
+    "        self.mass_ratio = params.mass_ratio #planet-star mass ratio\n",
+    "        self.geom_alb = params.geom_alb #geometric albedo\n",
+    "        \n",
+    "        self.f = None\n",
+    "    \n",
+    "    def planetary_curve(self):\n",
     "        \"\"\"\n",
     "        Reflected + emitted light from a transiting planet\n",
     "        \"\"\"\n",
-    "        y = - (A_refl*cos(2.*pi*phi))\n",
-    "        y = y + abs(min(y))  \n",
-    "        return y\n",
+    "        return -(pc_amp*cos(self.f))\n",
     "\n",
     "    #function for planetary phase curve component: ellipsoidal contribution, come from tidal forces pulling star mass for increased flux\n",
     "    #function of ind. variable: phase of cycle (phi)\n",
     "    #function of parameters: A_ellip\n",
-    "    def ellip_curve(phi, A_ellip):\n",
-    "        y = - (A_ellip*cos(2.*2.*pi*phi)) \n",
-    "        y = y + abs(min(y))   \n",
-    "        return y\n",
+    "    def ellip_var_curve(self):\n",
+    "        return -(ev_amp*cos(2.*self.f)) \n",
     "\n",
     "    #function for planetary phase curve component: doppler beaming contribution, comes from Kepler bandpass\n",
     "    #function of ind. variable: phase of cycle (phi)\n",
     "    #function of parameters: A_beam\n",
-    "    def beam_curve(phi, A_beam):\n",
-    "        y = A_beam*sin(2.*pi*phi)    \n",
-    "        return y\n",
+    "    def beaming_curve(self):\n",
+    "        return beam_amp*sin(self.f)    \n",
     "    \n",
-    "    def elcurve(self, params):\n",
+    "#    _getf(PyObject *self, PyObject *args)\n",
+    "    \n",
+    "    def total_curve(self):\n",
     "        \"\"\"\n",
     "        Calculate a model light curve including transit, ellipsoidal variations, planetary phase curve, \n",
     "        the beaming signal, and an eclipse.\n",
@@ -132,7 +148,7 @@
     "\n",
     "        :Example:\n",
     "\n",
-    "        >>> flux = m.el_curve(params)\n",
+    "        >>> flux = m.total_curve(params)\n",
     "        \"\"\"\n",
     "\n",
     "        return None #for now\n",
@@ -141,22 +157,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "ename": "ImportError",
-     "evalue": "No module named _eclipse",
+     "evalue": "No module named _rsky",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-7-246124e8c115>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0m_eclipse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m: No module named _eclipse"
+      "\u001b[0;32m<ipython-input-20-b03d644322d5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mbatman\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0m_rsky\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mparams\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbatman\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mTransitParams\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m       \u001b[0;31m#object to store transit parameters\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mparams\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mt0\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0.\u001b[0m                        \u001b[0;31m#time of inferior conjunction\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mImportError\u001b[0m: No module named _rsky"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "import batman\n",
+    "import _rsky\n",
+    "\n",
+    "params = batman.TransitParams()       #object to store transit parameters\n",
+    "params.t0 = 0.                        #time of inferior conjunction\n",
+    "params.per = 1.                       #orbital period\n",
+    "params.rp = 0.1                       #planet radius (in units of stellar radii)\n",
+    "params.a = 15.                        #semi-major axis (in units of stellar radii)\n",
+    "params.inc = 87.                      #orbital inclination (in degrees)\n",
+    "params.ecc = 0.                       #eccentricity\n",
+    "params.w = 90.                        #longitude of periastron (in degrees)\n",
+    "params.limb_dark = \"nonlinear\"        #limb darkening model\n",
+    "params.u = [0.5, 0.1, 0.1, -0.1]      #limb darkening coefficients [u1, u2, u3, u4]\n",
+    "\n",
+    "t = np.linspace(-0.025, 0.025, 1000)  #times at which to calculate light curve\n",
+    "m = batman.TransitModel(params, t)    #initializes model"
+   ]
   }
  ],
  "metadata": {
